objects/Asset__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Asset</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSubsidiary_c__c</fullName>
        <externalDeveloperName>AccountSubsidiary__c</externalDeveloperName>
        <label>Account Subsidiary</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accreditation_c__c</fullName>
        <externalDeveloperName>Accreditation__c</externalDeveloperName>
        <label>Accreditation</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>ISO 9001</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>ISO 11133</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>ISO 13485</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>ISO 17025</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>CE</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>RD 1215</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antivirus_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Antivirus__c</externalDeveloperName>
        <label>Antivirus</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetLevel__c</fullName>
        <externalDeveloperName>AssetLevel</externalDeveloperName>
        <label>Asset Level</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetProvidedById__c</fullName>
        <externalDeveloperName>AssetProvidedById</externalDeveloperName>
        <label>Asset Provided By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetServicedById__c</fullName>
        <externalDeveloperName>AssetServicedById</externalDeveloperName>
        <label>Asset Serviced By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Category_c__c</fullName>
        <externalDeveloperName>Asset_Category__c</externalDeveloperName>
        <label>Asset Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immunoassay - Chemistry</fullName>
                </value>
                <value>
                    <fullName>Immunoassay - Decentralized</fullName>
                </value>
                <value>
                    <fullName>Immunoassay - Micro</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
                <value>
                    <fullName>Molecular</fullName>
                </value>
                <value>
                    <fullName>Commercial Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Function_c__c</fullName>
        <externalDeveloperName>Asset_Function__c</externalDeveloperName>
        <label>Asset Function</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Pathogens</fullName>
                </value>
                <value>
                    <fullName>Blood Culture</fullName>
                </value>
                <value>
                    <fullName>Commercial Sterility</fullName>
                </value>
                <value>
                    <fullName>Endotoxin Detection</fullName>
                </value>
                <value>
                    <fullName>Environmental Control</fullName>
                </value>
                <value>
                    <fullName>Extraction</fullName>
                </value>
                <value>
                    <fullName>ID/AST</fullName>
                </value>
                <value>
                    <fullName>Integrated platform</fullName>
                </value>
                <value>
                    <fullName>Lab Automation</fullName>
                </value>
                <value>
                    <fullName>LIMS</fullName>
                </value>
                <value>
                    <fullName>Manual Pathogen</fullName>
                </value>
                <value>
                    <fullName>Manual Sterility</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>PCR Set up</fullName>
                </value>
                <value>
                    <fullName>Pre- Analystical</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>QC Organisms</fullName>
                </value>
                <value>
                    <fullName>Quality Indicators</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Staining</fullName>
                </value>
                <value>
                    <fullName>Sterility</fullName>
                </value>
                <value>
                    <fullName>TB</fullName>
                </value>
                <value>
                    <fullName>Temperature Monitoring</fullName>
                </value>
                <value>
                    <fullName>Thermocycler</fullName>
                </value>
                <value>
                    <fullName>Tuberculosis</fullName>
                </value>
                <value>
                    <fullName>Urine Screening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Type_c__c</fullName>
        <externalDeveloperName>Asset_Type__c</externalDeveloperName>
        <label>Asset Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABA</fullName>
                    <label>ABA - Simplex</label>
                </value>
                <value>
                    <fullName>ABB</fullName>
                    <label>ABB - NEMA</label>
                </value>
                <value>
                    <fullName>ABC</fullName>
                    <label>ABC - Retro</label>
                </value>
                <value>
                    <fullName>ABX</fullName>
                    <label>ABX - ABX</label>
                </value>
                <value>
                    <fullName>ADF</fullName>
                    <label>ADF - Adiafood</label>
                </value>
                <value>
                    <fullName>ADV</fullName>
                    <label>ADV - Adiavet</label>
                </value>
                <value>
                    <fullName>AES</fullName>
                    <label>AES - AES Trading Product Equipment</label>
                </value>
                <value>
                    <fullName>AIR</fullName>
                    <label>AIR - AIR IDEAL</label>
                </value>
                <value>
                    <fullName>API</fullName>
                    <label>API - miniAPI</label>
                </value>
                <value>
                    <fullName>APS</fullName>
                    <label>APS - APS One automated dispenser</label>
                </value>
                <value>
                    <fullName>APW</fullName>
                    <label>APW - Apiweb</label>
                </value>
                <value>
                    <fullName>ARG</fullName>
                    <label>ARG - Argene Molecular Reagents</label>
                </value>
                <value>
                    <fullName>ATB</fullName>
                    <label>ATB - ATB</label>
                </value>
                <value>
                    <fullName>AUP</fullName>
                    <label>AUP - Auto Preparator Old</label>
                </value>
                <value>
                    <fullName>B3D</fullName>
                    <label>B3D - BacT/ALERT 3D</label>
                </value>
                <value>
                    <fullName>B3S</fullName>
                    <label>B3S - New BacT/ALERT (Virtuo)</label>
                </value>
                <value>
                    <fullName>B3T</fullName>
                    <label>B3T - BacT/ALERT 3D MB</label>
                </value>
                <value>
                    <fullName>BFL</fullName>
                    <label>BFL - BactiFlow</label>
                </value>
                <value>
                    <fullName>BFW</fullName>
                    <label>BFW - Bactiflow ALS</label>
                </value>
                <value>
                    <fullName>BIO</fullName>
                    <label>BIO - bioMérieux Media</label>
                </value>
                <value>
                    <fullName>BMB</fullName>
                    <label>BMB - BacT/ALERT Classic MB</label>
                </value>
                <value>
                    <fullName>BTC</fullName>
                    <label>BTC - BacT/ALERT Classic</label>
                </value>
                <value>
                    <fullName>BTM</fullName>
                    <label>BTM - BACTOMETER M</label>
                </value>
                <value>
                    <fullName>CAM</fullName>
                    <label>CAM - COAG-A-MATE</label>
                </value>
                <value>
                    <fullName>CHM</fullName>
                    <label>CHM - ChemScan RDI</label>
                </value>
                <value>
                    <fullName>CLN</fullName>
                    <label>CLN - Clinline</label>
                </value>
                <value>
                    <fullName>COP</fullName>
                    <label>COP - Copernico</label>
                </value>
                <value>
                    <fullName>DAV</fullName>
                    <label>DAV - Da Vinci</label>
                </value>
                <value>
                    <fullName>DCO</fullName>
                    <label>DCO - D-Count M</label>
                </value>
                <value>
                    <fullName>DCT</fullName>
                    <label>DCT - D-Count</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalibratedToolId_c__c</fullName>
        <externalDeveloperName>CalibratedToolId__c</externalDeveloperName>
        <label>Calibrated Tool Id</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalibrationExpirationDate_c__c</fullName>
        <externalDeveloperName>CalibrationExpirationDate__c</externalDeveloperName>
        <label>Calibration Expiration Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calibrationinprogress_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Calibrationinprogress__c</externalDeveloperName>
        <label>Calibration in progress</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity_c__c</fullName>
        <externalDeveloperName>Capacity__c</externalDeveloperName>
        <label>Capacity</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleansing_c__c</fullName>
        <externalDeveloperName>Cleansing__c</externalDeveloperName>
        <label>Cleansing</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>PERIODIQUE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommercialEndDateGlobal_c__c</fullName>
        <externalDeveloperName>CommercialEndDateGlobal__c</externalDeveloperName>
        <label>Commercial End Date Global</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommitmentEndDate_c__c</fullName>
        <externalDeveloperName>CommitmentEndDate__c</externalDeveloperName>
        <inlineHelpText>Commitment End Date</inlineHelpText>
        <label>Commitment End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommitmentStartDate_c__c</fullName>
        <externalDeveloperName>CommitmentStartDate__c</externalDeveloperName>
        <inlineHelpText>Commitment Start Date</inlineHelpText>
        <label>Commitment Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_By_c__c</fullName>
        <externalDeveloperName>Confirmed_By__c</externalDeveloperName>
        <label>Confirmed By</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date_c__c</fullName>
        <externalDeveloperName>Confirmed_Date__c</externalDeveloperName>
        <label>Confirmed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConstructionDate_c__c</fullName>
        <externalDeveloperName>ConstructionDate__c</externalDeveloperName>
        <inlineHelpText>The date/year of construction of the Equipment</inlineHelpText>
        <label>Construction Year/Month</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_c__c</fullName>
        <externalDeveloperName>Country__c</externalDeveloperName>
        <label>Country</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataQuality_c__c</fullName>
        <externalDeveloperName>DataQuality__c</externalDeveloperName>
        <label>Data Quality</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DateCreationRecord_c__c</fullName>
        <externalDeveloperName>DateCreationRecord__c</externalDeveloperName>
        <label>Date on Which Record Was Created</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decontamination_c__c</fullName>
        <externalDeveloperName>Decontamination__c</externalDeveloperName>
        <label>Decontamination</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>PERIODIQUE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DistributorOrigin_c__c</fullName>
        <externalDeveloperName>DistributorOrigin__c</externalDeveloperName>
        <label>Distributor Origin</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_c__c</fullName>
        <externalDeveloperName>Division__c</externalDeveloperName>
        <label>Division</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                    <label>010 - Diagnostic</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>020 - POL</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - Food</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>050 - Pharma</label>
                </value>
                <value>
                    <fullName>030</fullName>
                    <label>030 - Blood Bank</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndOfGlobalSupport_c__c</fullName>
        <externalDeveloperName>EndOfGlobalSupport__c</externalDeveloperName>
        <label>End of Global Support</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentAlias_c__c</fullName>
        <externalDeveloperName>EquipmentAlias__c</externalDeveloperName>
        <label>Equipment Alias</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentCategory_c__c</fullName>
        <externalDeveloperName>EquipmentCategory__c</externalDeveloperName>
        <inlineHelpText>Determines the category of the equipment</inlineHelpText>
        <label>Equipment Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                    <label>U Equipment (asset-10 years)</label>
                </value>
                <value>
                    <fullName>V</fullName>
                    <label>V Equipment (asset-3 years)</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Y Equipment</label>
                </value>
                <value>
                    <fullName>Z</fullName>
                    <label>Z Equipment (asset-5 years)</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>P Production resources/tools</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>T Equipment (asset- 9 years)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>250</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLsite_c__c</fullName>
        <externalDeveloperName>FLsite__c</externalDeveloperName>
        <inlineHelpText>Name of the Functional Location Site (gives the hierarchy of the functional location).</inlineHelpText>
        <label>FL Site</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSE_District_Manager_c__c</fullName>
        <externalDeveloperName>FSE_District_Manager__c</externalDeveloperName>
        <label>FSE District Manager</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSE_District_c__c</fullName>
        <externalDeveloperName>FSE_District__c</externalDeveloperName>
        <label>FSE District</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_c__c</fullName>
        <externalDeveloperName>Family__c</externalDeveloperName>
        <label>Family</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCESSORY</fullName>
                </value>
                <value>
                    <fullName>BARCODE</fullName>
                </value>
                <value>
                    <fullName>COMPUTER</fullName>
                </value>
                <value>
                    <fullName>CONNECTION</fullName>
                </value>
                <value>
                    <fullName>CONSUMABLE</fullName>
                </value>
                <value>
                    <fullName>DOCUMENTATION</fullName>
                </value>
                <value>
                    <fullName>MAIN MODULE</fullName>
                </value>
                <value>
                    <fullName>MONITOR</fullName>
                </value>
                <value>
                    <fullName>POWER SUPPLY</fullName>
                </value>
                <value>
                    <fullName>PRINTER</fullName>
                </value>
                <value>
                    <fullName>PROBE</fullName>
                </value>
                <value>
                    <fullName>PROBE EQUIPT</fullName>
                </value>
                <value>
                    <fullName>PROBE WO EQUIPT</fullName>
                </value>
                <value>
                    <fullName>SECONDARY MODULE</fullName>
                </value>
                <value>
                    <fullName>SERIALIZED SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>STAND ALONE</fullName>
                </value>
                <value>
                    <fullName>SYSTEM</fullName>
                </value>
                <value>
                    <fullName>UNDEFINED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirmwareVersion_c__c</fullName>
        <externalDeveloperName>FirmwareVersion__c</externalDeveloperName>
        <label>Firmware Version</label>
        <length>15</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalLocationSAPAssetNumber_c__c</fullName>
        <externalDeveloperName>FunctionalLocationSAPAssetNumber__c</externalDeveloperName>
        <inlineHelpText>SAP Asset Number of the Functional Location (System)</inlineHelpText>
        <label>Functional Location SAP Asset Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GTINcodeForUDI_c__c</fullName>
        <externalDeveloperName>GTINcodeForUDI__c</externalDeveloperName>
        <label>GTIN Code for UDI</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_c__c</fullName>
        <externalDeveloperName>Hardware__c</externalDeveloperName>
        <label>Hardware</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NSH</fullName>
                </value>
                <value>
                    <fullName>INCUBATOR CO2 OPTION</fullName>
                </value>
                <value>
                    <fullName>WASP BROTH OPTION</fullName>
                </value>
                <value>
                    <fullName>WASP URINE TURNTABLE</fullName>
                </value>
                <value>
                    <fullName>WASP DISK DISPENSER</fullName>
                </value>
                <value>
                    <fullName>WASP SIDE LABELLING MODULE</fullName>
                </value>
                <value>
                    <fullName>WASP TWIN LOOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_Account_modif_c__c</fullName>
        <externalDeveloperName>IB_Account_modif__c</externalDeveloperName>
        <label>-Account</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_CommitmentEndDate_modif_c__c</fullName>
        <externalDeveloperName>IB_CommitmentEndDate_modif__c</externalDeveloperName>
        <label>-Commitment End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IB_CommitmentStartDate_modif_c__c</fullName>
        <externalDeveloperName>IB_CommitmentStartDate_modif__c</externalDeveloperName>
        <label>-Commitment Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IB_Division_modif_c__c</fullName>
        <externalDeveloperName>IB_Division_modif__c</externalDeveloperName>
        <label>-Division</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                    <label>010 - Diagnostic</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>020 - POL</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - Food</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>050 - Pharma</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_InstallDate_modif_c__c</fullName>
        <externalDeveloperName>IB_InstallDate_modif__c</externalDeveloperName>
        <label>-Install Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IB_Last_PM_Date_modif_c__c</fullName>
        <externalDeveloperName>IB_Last_PM_Date_modif__c</externalDeveloperName>
        <label>-Last PM Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IB_Market_modif_c__c</fullName>
        <externalDeveloperName>IB_Market_modif__c</externalDeveloperName>
        <label>-Market</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0010</fullName>
                    <label>0010 - Clinical</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020 - Industry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_Next_PM_Date_modif_c__c</fullName>
        <externalDeveloperName>IB_Next_PM_Date_modif__c</externalDeveloperName>
        <label>-Next PM Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IB_Number_of_Tests_per_Year_modif_c__c</fullName>
        <externalDeveloperName>IB_Number_of_Tests_per_Year_modif__c</externalDeveloperName>
        <label>-Number of Tests per Year</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IB_Service_Contract_End_Date_modif_c__c</fullName>
        <externalDeveloperName>IB_Service_Contract_End_Date_modif__c</externalDeveloperName>
        <label>-Service Contract End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IB_Service_Contract_Number_modif_c__c</fullName>
        <externalDeveloperName>IB_Service_Contract_Number_modif__c</externalDeveloperName>
        <label>-Service Contract Number</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB_Service_Contract_Start_date_modif_c__c</fullName>
        <externalDeveloperName>IB_Service_Contract_Start_date_modif__c</externalDeveloperName>
        <label>-Service Contract Start date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IB_Service_Contract_Type_modif_c__c</fullName>
        <externalDeveloperName>IB_Service_Contract_Type_modif__c</externalDeveloperName>
        <label>-Service Contract Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANNUAL CERT-VITEK C</fullName>
                </value>
                <value>
                    <fullName>APC SMT-1000 UPS 120V</fullName>
                </value>
                <value>
                    <fullName>APPLICATOR SIMPLEX C76</fullName>
                </value>
                <value>
                    <fullName>BME SUPPORT KIT - EASYMAG</fullName>
                </value>
                <value>
                    <fullName>BME SUPPORT KIT - VITEK 2</fullName>
                </value>
                <value>
                    <fullName>BME SUPPORT KIT-BACT/ALERT 3D</fullName>
                </value>
                <value>
                    <fullName>BTA3D COMBINATION MODULE RIGHT</fullName>
                </value>
                <value>
                    <fullName>BUSINESS HOURS ONLY FULL SERVICE AGREEM.</fullName>
                </value>
                <value>
                    <fullName>CREDIT CARD ONLY</fullName>
                </value>
                <value>
                    <fullName>DEMO-AIR IDEAL</fullName>
                </value>
                <value>
                    <fullName>DEMO-APS ONE</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACT/ALERT 3D</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACT/ALERT CLAS.</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACTIFLOW</fullName>
                </value>
                <value>
                    <fullName>DEMO-BACTIFLOW ALS BMX R&amp;D</fullName>
                </value>
                <value>
                    <fullName>DEMO-CHEMSCAN RDI</fullName>
                </value>
                <value>
                    <fullName>DEMO-D COUNT</fullName>
                </value>
                <value>
                    <fullName>DEMO-DILUMAT INDUSTRY MRKTG</fullName>
                </value>
                <value>
                    <fullName>DEMO-DIVERSILAB</fullName>
                </value>
                <value>
                    <fullName>DEMO-EASY Q</fullName>
                </value>
                <value>
                    <fullName>DEMO-EASYMAG</fullName>
                </value>
                <value>
                    <fullName>DEMO-LABGUARD</fullName>
                </value>
                <value>
                    <fullName>DEMO-MASTERCLAVE 09 BMX IND R&amp;D</fullName>
                </value>
                <value>
                    <fullName>DEMO-MASTERCLAVE 5-28 - BMX INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>DEMO-MASTERCLAVE 60</fullName>
                </value>
                <value>
                    <fullName>DEMO-MINIMAG</fullName>
                </value>
                <value>
                    <fullName>DEMO-MINIVIDAS</fullName>
                </value>
                <value>
                    <fullName>DEMO-MYLA</fullName>
                </value>
                <value>
                    <fullName>DEMO-OBSERVA</fullName>
                </value>
                <value>
                    <fullName>DEMO-PM05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>